--- a/Moteur/Moteur.vcxproj.filters
+++ b/Moteur/Moteur.vcxproj.filters
@@ -25,9 +25,6 @@
     <ClCompile Include="input.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
-    <ClCompile Include="main.cpp">
-      <Filter>Fichiers sources</Filter>
-    </ClCompile>
     <ClCompile Include="Mesh.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
@@ -46,8 +43,26 @@
     <ClCompile Include="transform.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
-    <ClCompile Include="MathHelper.cpp">
-      <Filter>Fichiers sources</Filter>
+    <ClCompile Include="Source\Camera.cpp">
+      <Filter>Fichiers de ressources\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\d3dApp.cpp">
+      <Filter>Fichiers de ressources\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\d3dUtil.cpp">
+      <Filter>Fichiers de ressources\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\DDSTextureLoader.cpp">
+      <Filter>Fichiers de ressources\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\GameTimer.cpp">
+      <Filter>Fichiers de ressources\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\GeometryGenerator.cpp">
+      <Filter>Fichiers de ressources\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\MathHelper.cpp">
+      <Filter>Fichiers de ressources\Source</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -96,11 +111,35 @@
     <ClInclude Include="timer.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
-    <ClInclude Include="UploadBuffer.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+    <ClInclude Include="Source\Camera.h">
+      <Filter>Fichiers de ressources\Source</Filter>
     </ClInclude>
-    <ClInclude Include="MathHelper.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+    <ClInclude Include="Source\d3dApp.h">
+      <Filter>Fichiers de ressources\Source</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\d3dUtil.h">
+      <Filter>Fichiers de ressources\Source</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\d3dx12.h">
+      <Filter>Fichiers de ressources\Source</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\DDSTextureLoader.h">
+      <Filter>Fichiers de ressources\Source</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\GameTimer.h">
+      <Filter>Fichiers de ressources\Source</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\GeometryGenerator.h">
+      <Filter>Fichiers de ressources\Source</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\MathHelper.h">
+      <Filter>Fichiers de ressources\Source</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\stdafx.h">
+      <Filter>Fichiers de ressources\Source</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\UploadBuffer.h">
+      <Filter>Fichiers de ressources\Source</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -113,21 +152,18 @@
     <Filter Include="Fichiers de ressources">
       <UniqueIdentifier>{a249f3a6-2c34-49c6-818b-9e59730a346e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Fichiers de ressources\Source">
+      <UniqueIdentifier>{6846d96e-6bba-422d-8ac4-0d0d67bead8f}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Fichiers de ressources\Shader">
-      <UniqueIdentifier>{e1d5a049-2194-4141-8fb2-fd1990077458}</UniqueIdentifier>
+      <UniqueIdentifier>{bfe214e1-d663-41d0-9d18-cbb04786bcf9}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="Shaders\color.hlsl">
-      <Filter>Fichiers de ressources\Shader</Filter>
-    </FxCompile>
+    <None Include="Shaders\color_ps.cso" />
+    <None Include="Shaders\color_vs.cso" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Shaders\color_ps.cso">
-      <Filter>Fichiers de ressources\Shader</Filter>
-    </None>
-    <None Include="Shaders\color_vs.cso">
-      <Filter>Fichiers de ressources\Shader</Filter>
-    </None>
+    <Text Include="Shaders\color.hlsl" />
   </ItemGroup>
 </Project>
