--- a/Moteur/Moteur.vcxproj
+++ b/Moteur/Moteur.vcxproj
@@ -132,6 +132,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Buffer.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="Engine.h" />
@@ -143,7 +144,6 @@
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="MeshRenderer.h" />
     <ClInclude Include="Shader.h" />
-    <ClInclude Include="Source\Camera.h" />
     <ClInclude Include="Source\d3dApp.h" />
     <ClInclude Include="Source\d3dUtil.h" />
     <ClInclude Include="Source\d3dx12.h" />
@@ -158,6 +158,7 @@
     <ClInclude Include="transform.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Buffer.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="Engine.cpp" />
@@ -168,7 +169,6 @@
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="MeshRenderer.cpp" />
     <ClCompile Include="Shader.cpp" />
-    <ClCompile Include="Source\Camera.cpp" />
     <ClCompile Include="Source\d3dApp.cpp" />
     <ClCompile Include="Source\d3dUtil.cpp" />
     <ClCompile Include="Source\DDSTextureLoader.cpp" />
