--- a/Moteur/Moteur.vcxproj.filters
+++ b/Moteur/Moteur.vcxproj.filters
@@ -34,7 +34,7 @@
     <ClCompile Include="Texture.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
-    <ClCompile Include="timer.cpp">
+    <ClCompile Include="Timer.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
     <ClCompile Include="transform.cpp">
@@ -167,9 +167,6 @@
       <Filter>Fichiers sources</Filter>
     </ClCompile>
     <ClCompile Include="Camera.cpp">
-      <Filter>Fichiers sources</Filter>
-    </ClCompile>
-    <ClCompile Include="BoxGeo.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
     <Filter Include="Fichiers d%27en-tête">
