--- a/Jeu/Jeu.vcxproj
+++ b/Jeu/Jeu.vcxproj
@@ -129,9 +129,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Incl.h" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MovementScript.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Game.h" />
     <ClInclude Include="MovementScript.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
