--- a/Jeu/Jeu.vcxproj
+++ b/Jeu/Jeu.vcxproj
@@ -129,14 +129,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Incl.h" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MovementScript.cpp" />
+    <ClCompile Include="ShootScript.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Bullet.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="MovementScript.h" />
+    <ClInclude Include="ShootScript.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
