--- a/Jeu/Jeu.vcxproj
+++ b/Jeu/Jeu.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameLogicScript.cpp" />
     <ClCompile Include="Incl.h" />
+    <ClCompile Include="LifeBar.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Meteor.cpp" />
     <ClCompile Include="MovementScript.cpp" />
@@ -143,6 +144,7 @@
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameLogicScript.h" />
+    <ClInclude Include="LifeBar.h" />
     <ClInclude Include="Meteor.h" />
     <ClInclude Include="MovementScript.h" />
     <ClInclude Include="Player.h" />
